# outcome

./: .gitignore  Cargo.toml  Justfile  LICENSE.md  README.md  build.rs  codecov.yml  rustfmt.toml
.github/: FUNDING.yml  dependabot.yml  renovate.json
.github/scripts/: github  retrieve-id  setup-cargo-hack  setup-sccache
.github/settings/: grcov.yml  typos.yml  yamllint.yml
.github/workflows/: actions.yml  audit.yml  ci.yml  coverage.yml  pull-request.yml  release.yml  spellcheck.yml
docs/: features.md  state-escalation.md  why-augment-result.md
src/: aberration.rs  concern.rs  convert.rs  diagnostic.rs  ext.rs  iter.rs  lib.rs  nightly.rs  outcome.rs  prelude.rs  pretty.rs  private.rs  report.rs  stable.rs  unstable.rs  wrap.rs
