[package]
name = "outcome-46f94afc-026f-5511-9d7e-7d1fd495fb5c"
version = "0.0.0"
edition = "2018"
description = "Augmentations for error propagation"
repository = "https://github.com/slurps-mad-rips/outcome"
license = "MIT"
readme = "README.md"
keywords = ["outcome", "result", "failure", "eyre"]
categories = ["no-std", "rust-patterns"]
resolver = "2"
include = ["src", "Cargo.toml", "LICENSE.md"]
build = "build.rs"

[lib]
name = "outcome"
path = "src/lib.rs"

[dependencies]
color-eyre = { version = "0.5.11", optional = true, features = ["track-caller"] }
eyre = { version = "0.6.5", optional = true }

[build-dependencies]
rustversion = "1.0.5"

[features]
default = ["std"]
nightly = ["unstable"]
pretty-report = ["report", "color-eyre"]
report = ["eyre", "std"]
std = []
unstable = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
