[package]
name = "outcome-46f94afc-026f-5511-9d7e-7d1fd495fb5c"
description = "Augmentations for error propagation"
repository = "https://github.com/slurps-mad-rips/outcome"
version = "0.0.0"
edition = "2018"
license = "MIT"
readme = "README.md"
categories = ["no-std", "rust-patterns"]
keywords = ["outcome", "result", "failure", "eyre"]
include = ["docs", "src", "Cargo.toml", "LICENSE.md"]
build = "build.rs"
resolver = "2"

[lib]
name = "outcome"
path = "src/lib.rs"

[dependencies]
eyre = { version = "0.6.5", optional = true }

[build-dependencies]
rustversion = "1.0.5"

[features]
default = ["std"]
nightly = ["unstable"]
report = ["eyre", "std"]
std = []
unstable = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
