[package]
name = "outcome-46f94afc-026f-5511-9d7e-7d1fd495fb5c"
description = "Augmentations for error propagation"
repository = "https://github.com/bruxisma/outcome"
version = "0.2.0-dev"
edition = "2021"
license = "MIT"
readme = "README.md"
categories = ["no-std", "rust-patterns"]
keywords = ["outcome", "result", "failure", "eyre"]
exclude = [".github", ".gitignore", "Justfile", "rustfmt.toml", "codecov.yml"]
build = "build.rs"

[lib]
name = "outcome"
path = "src/lib.rs"

[dependencies]
eyre = { version = "0.6.5", optional = true }
miette = { version = ">=3.0.0", optional = true }

[build-dependencies]
rustversion = "1.0.6"

[features]
default = ["std"]
diagnostic = ["miette", "std"]
nightly = ["unstable"]
report = ["eyre", "std"]
std = []
unstable = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[profile.coverage]
codegen-units = 1
incremental = false
inherits = "test"
opt-level = 0
overflow-checks = false
panic = "abort"
